# benchmarkAI

./: .gitignore  README.md  TODO_DIFFUSION_BENCHMARK.md  benchmark_result.json  pyproject.toml  requirements.txt  run.bat  run.py  run.sh  setup.py
ai_benchmark/: __init__.py  benchmark.py  cleanup.py  cli.py  power_monitor.py  submit.py  system_info.py
