[tool.poetry]
name = "ai-benchmark"
version = "1.0.0"
description = "Cross-platform AI system benchmark — compare hardware, not models"
authors = []
license = "MIT"
readme = "README.md"
keywords = ["benchmark", "ollama", "gpu", "ai", "hardware"]

[tool.poetry.dependencies]
python = "^3.10"
typer = ">=0.12.0"
ollama = ">=0.4.0"
psutil = ">=5.9.0"
requests = ">=2.31.0"
rich = ">=13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.0"

[tool.poetry.scripts]
ai-benchmark = "ai_benchmark.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
